<resources>
    <string name="app_name">Mitocine</string>
    <string name="str_username">Usuario</string>
    <string name="str_password">Contraseña</string>
    <string name="str_login">Iniciar Sesión</string>
    <string name="str_register">Registrarse Ahora</string>
    <string name="str_register_now">Registrarse ahora</string>
    <string name="str_username2">Usuario</string>
    <string name="str_name">Nombre</string>
    <string name="str_lastname">Apellido</string>
    <string name="str_address">Direccion</string>
    <string name="str_password2">Contraseña</string>
    <string name="str_email">Correo Electrónico</string>
    <string name="str_phone">Teléfono</string>
    <string name="str_register2">Registrar</string>
    <string name="error_username">El campo usuario es requerido</string>
    <string name="str_movie">Pelicula</string>
    <string name="str_movies">Cartelera</string>
    <string name="str_favourite">Favorito</string>
    <string name="str_settings">Ajustes</string>
    <string name="str_soon">Proximamente</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,</string>
    <string name="str_comment">Comentar</string>
    <string name="perfil">perfil</string>
    <string name="str_dark_theme">Activar tema oscuro</string>
    <string name="str_change_address_google">Cambiar dirección Google</string>
    <string name="str_change_address">Cambiar dirección</string>
    <string name="str_logout">Cerrar Sesión</string>
    <string name="str_empty_list">No hay datos que mostrar</string>
    <string name="title_activity_maps">Map</string>
    <string name="str_search">Buscar</string>
    <string name="str_latitude">Latitud</string>
    <string name="str_longitude">Longitud</string>
    <string name="str_get_position">Obtener Ubicación</string>
    <string name="location_rationale">El permiso es requerido</string>
    <string name="gallery_rationale">El permiso es requerido</string>
    <string name="camera_rationale">El permiso es requerido</string>
</resources>